log-in finished

--- a/Boostrap/lg-Login.html
+++ b/Boostrap/lg-Login.html
@@ -34,7 +34,38 @@
     <main class="main-container d-flex">
         <article class="main-container__card d-flex">
             <section class="card-left col">left</section>
-            <section class="card-right col ">right</section>
+            <section class="card-right col">
+                <div class="log-form">
+                    <div class="log-form__header">
+                        <h1 class="log-form__title">inicio de sesion</h1>
+                        <h3 class="log-form__subtitle">Por favor, Digite sus credenciales</h3>
+                    </div>
+                    <div class="log-form__body">
+                        <h4 class="log-form__body--text">Recuerde que puede usar tanto su correo como su usuario</h4>
+                        <form>
+                            <div class="mb-3">
+                                <div class="input-group">
+                                    <span class="input-group-text" id=""><i class="bi bi-person"></i></span>
+                                    <input type="text" class="form-control" placeholder="Usuario" aria-label="Usuario" aria-describedby="">
+                                  </div>
+                            </div>
+                            <div class="mb-2">
+                                <div class="input-group ">
+                                    <span class="input-group-text" id=""><i class="bi bi-key"></i></span>
+                                    <input type="text" class="form-control" placeholder="Contraseña" aria-label="Contraseña" aria-describedby="">
+                                  </div>
+                            </div>
+                             <a class="log-form__body--link" href="">He olvidado mi usuario o contraseña</a>
+                            <button type="submit" class="btn btn-default mt-3 d-block">Continuar</button>
+                            
+                          </form>
+                    </div>
+                    <div class="log-form__footer text-center">
+                       <span class="">Si aun no tiene usuario y contraseña registrese <b><a class="text-dark" style="text-decoration: none;" href="#">AQUI</a></b></span>
+                    </div>
+
+                </div>
+            </section>
         </article>
     </main>
 
